--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,15 @@
 @charset "utf-8";
 /* CSS Document */
 
+html,
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+}
+
 body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 	line-height: 1.5;
@@ -71,7 +78,9 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+    width: 100%;
+    top: 70px;
+    position: fixed;
 }
 
 /* Display list items side by side */
@@ -98,6 +107,11 @@ nav h1 a {
     text-decoration: underline;
 }
 /* ====================== Map ====================== */
+
+#map-container {
+  width: 100%;
+}
+
 #map {
   height: 400px;
   width: 100%;
@@ -273,3 +287,184 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
 }
+
+
+
+/*responsive design: media queries*/
+@media screen and (max-width: 768px) {
+  
+  .inside header  {
+    width: 100%;
+    position: static;
+  }
+  .inside #breadcrumb {
+    width: 100%;
+    position: static;
+    padding: 10px 0 16px;
+  }
+  .inside #maincontent {
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .inside #map-container {
+    width: 100%;
+    height: 300px;
+    position: static;
+
+  }
+   #restaurant-container {
+     padding-top: 40px;
+     width: 100%;
+     display: flex;
+     flex-wrap: wrap;
+   }
+   #restaurant-img {
+     width: 100%;
+     height: 50%;
+   }
+   #restaurant-cuisine {
+     width: 100%;
+   }
+   #restaurant-address {
+     width: 100%;
+     font-size: 16pt;
+   }
+   #restaurant-hours {
+    width: 50%;
+   }
+   #reviews-container {
+     width: 100%;
+   }
+   .filter-options h2 {
+     margin: 0 5px;
+   }
+   .filter-options select {
+     height: 30px;
+     width: 160px;
+     font-size: 10pt;
+     margin: 10px 3px;
+   }
+   #restaurants-list li {
+     width: 260px;
+    padding: 0 10px 25px;
+   }
+   #restaurants-list li h1 {
+     font-size: 12pt;
+   }
+} 
+@media screen and (max-width: 675px) {
+  #restaurants-list li {
+    width: 250px;
+    padding: 0 10px 25px;
+    border: 2px solid #ccc;
+    margin: 3px;
+  }
+
+  #restaurants-list p {
+    font-size: 10pt;
+  }
+}
+@media screen and (max-width: 563px) {
+  #restaurants-list li {
+    border: 2px solid #ccc;
+    margin: 15px;
+  }
+  .filter-options select {
+    width: 145px;
+    font-size: 10pt;
+  }
+  .filter-options h2 {
+    font-size: 12pt;
+  }
+  #footer {
+    padding: 10px;
+  }
+}
+@media screen and (max-width: 490px) {
+  nav h1 a, #restaurant-name {
+    font-size: 18pt;
+  }
+
+  #restaurant-address {
+    font-size: 14pt;
+  }
+
+  #restaurant-hours {
+    width: 80%;
+  }
+
+  #reviews-container {
+    padding: 30px 0 80px;
+    width: 100%;
+  }
+  #reviews-container h2 {
+    font-size: 18pt;
+    padding-left: 25px;
+  }
+
+  #reviews-list {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  } 
+  #reviews-list li {
+    width: 80%;
+  }  
+}
+
+@media screen and (max-width: 458px) {
+  .filter-options h2 {
+    display: none;
+  }
+  #footer {
+    padding: 5px;
+  }
+  
+}
+@media screen and (max-width: 390px) {
+  nav h1 a {
+    font-size: 14pt;
+    font-weight: 400px;
+    letter-spacing: 4px;
+  }
+  header {
+    height: 50px;
+  }
+  #restaurant-name {
+    font-size: 14pt;
+    font-weight: 400;
+    letter-spacing: 2px;
+  }
+  #restaurant-address {
+    font-size: 10pt;
+  }
+  #resurant-container {
+    padding: 0;
+  }
+  #restaurant-hours {
+    width: 100%;
+  }
+}
+  @media screen and (max-width: 330px) {
+    nav h1 a {
+      font-size: 12pt;
+      letter-spacing: 2px;
+    }
+    
+    .filter-options select {
+      width: 125px;
+      font-size: 8pt;
+      padding: 0 5px;
+      margin: 10px 2px;
+    }
+    #footer {
+      padding: 3px;
+    }
+
+  }
+
