--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,14 @@ a:hover, a:focus {
 a img{
 	border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0 0 20px;
+  padding-top: 20px;
+}
+
+h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
