--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,9 @@ nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
+  display: flex;
   text-align:center;
+  align-items: center;
 }
 nav h1 {
   margin: auto;
@@ -126,6 +128,8 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
+  display: flex;
+  flex-direction: row;
   width: 100%;
   height: 50px;
   background-color: #3397DB;
